--- a/app/views/admin/trucks/_form.html.erb
+++ b/app/views/admin/trucks/_form.html.erb
@@ -31,19 +31,21 @@
         <div role="tabpanel" class="tab-pane active " id="home">
 
           <div class="row">
-          <div class="col-md-4">
-            <label>
-              <%= f.check_box :active  %> Disponible
-            </label>
-            <br/><br/>
+            <div class="col-md-4">
+              <label>
+                <%= f.check_box :active  %> Disponible
+              </label>
+              <br/><br/>
+            </div>
           </div>
-          </div>
-
           <%= render partial: 'shared/paso1' , locals: { f:f , type: @truck.type_truck_id} %>
         </div>
 
         <div role="tabpanel" class="tab-pane" id="profile">
-          <%= render partial: "shared/camposGeneralesI", locals:{ f: f } %>
+
+          <% if params[:v] != '5'&& @truck.type_truck_id != 5 %>
+            <%= render partial: "shared/camposGeneralesI", locals:{ f: f } %>
+          <% end %>
           <!-- 1 tractomula-->
           <% if params[:v] == '1'|| @truck.type_truck_id==1 %>
 
@@ -112,12 +114,12 @@
 
             <div class="row">
 
-              <div class="col-md-6">
+              <!--div class="col-md-6">
                 <div class="form-group">
                   <%= f.label :wheels_truck_id, 'Quinta Rueda' %>
                   <%= f.collection_select :wheels_truck_id, WheelsTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
                 </div>
-              </div>
+              </div-->
 
               <div class="col-md-6">
                 <div class="form-group">
@@ -125,9 +127,15 @@
                   <%= f.collection_select :capacidadcarga, @capacidadcarga,:first,:first,{prompt:'Selecciones'},{class: 'form-control text_field'} %>
                 </div>
               </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :marcacarpa, 'Marca Carpa' %>
+                  <%= f.text_field :marcacarpa, :class =>'form-control'  %>
+                </div>
+              </div>
             </div>
 
-            <div class="row">
+            <!--div class="row">
               <div class='col-md-6'>
                 <div class="form-gorup">
                   <label for="">numero de ejes retractiles </label><br/>
@@ -141,7 +149,7 @@
                   <%= f.collection_select :contracts_truck_id, ContractsTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
                 </div>
               </div>
-            </div>
+            </div-->
 
             <div class="row">
               <div class="col-md-6">
@@ -158,7 +166,7 @@
               </div>
             </div>
 
-            <div class='row'>
+            <!--div class='row'>
 
               <div class="col-md-6">
                 <div class="form-group">
@@ -166,7 +174,7 @@
                   <%= f.text_field :marcacarpa, :class =>'form-control'  %>
                 </div>
               </div>
-            </div>
+            </div-->
 
           <% end %>
 
@@ -180,8 +188,9 @@
           <!-- trailers 5-->
           <% if params[:v] == '5'|| @truck.type_truck_id==5 %>
 
+            <!--
             <div class="row">
-              <!--
+
               <div class="col-md-6">
                 <div class="form-group">
                   <%= f.label :wheels_truck_id, 'Quinta Rueda' %>
@@ -200,7 +209,7 @@
                   <%= f.collection_select :marca_carroceria_id, MarcaCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
                 </div>
               </div>
-              -->
+
               <div class="col-md-6">
                 <div class="form-group">
                   <%= f.label :marcacarpa, 'Marca Carpa' %>
@@ -209,9 +218,9 @@
               </div>
 
             </div>
-
+            -->
             <div class="row">
-
+              <!--
               <div class="col-md-3 extras">
                 <div class="form-group">
                   <%= f.label :tipotrailer, 'Tipo Trailer' %>
@@ -232,26 +241,30 @@
                   <%= f.text_field :modelotrailer, :class =>'form-control'  %>
                 </div>
               </div>
-
-              <div class="col-md-3 extras">
+              -->
+              <div class="col-md-6">
                 <div class="form-group">
-                  <%= f.label :numeroejestrailer, 'Numero de ejes' %>
-                  <%= f.text_field :numeroejestrailer, :class =>'form-control'  %>
+                  <%= f.label :marca_carroceria_id, 'Marca Carroceria' %>
+                  <%= f.collection_select :marca_carroceria_id, MarcaCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
                 </div>
               </div>
-
-            </div>
-
-            <div class="row">
+              <div class="col-md-3 extras">
+                <div class="form-group">
+                  <%= f.label :numeroejestrailer, 'Numero de Ejes' %><br/>
+                  <%= f.radio_button :numeroejestrailer, '1', :checked => false %> 1
+                  <%= f.radio_button :numeroejestrailer, '2', :checked => false %> 2
+                  <%= f.radio_button :numeroejestrailer, '3', :checked => false %> 3
+                  <%= f.radio_button :numeroejestrailer, '4 o más', :checked => false %> 4 o más
+                </div>
+              </div>
               <div class="col-md-3">
-                <label for="">numero de ejes retractiles </label><br/>
+                <label for="">Numero de ejes retractiles </label><br/>
 
-                <%= f.radio_button :ejesretractiles, '1', :checked => true %> 1
+                <%= f.radio_button :ejesretractiles, '1', :checked => false %> 1
 
                 <%= f.radio_button :ejesretractiles, '2', :checked => false %> 2
 
               </div>
-
             </div>
 
           <% end %>
@@ -290,7 +303,7 @@
 
           <!-- Imagenes -->
 
-          <%= render partial: 'shared/camposGeneralesII', locals:{ f: f } %> <br/> <br/> <br/> <br/>
+          <%= render partial: 'shared/camposGeneralesII', locals:{ f: f, type: @truck.type_truck_id } %> <br/> <br/> <br/> <br/>
           <div id='imagenes'>
             <% if bandNew==true %>
               <%= render partial: 'shared/imagenesNew', locals:{ object: f, anuncio: @truck} %>
