--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -43,10 +43,11 @@
                   <table class="table"><tbody>
 
                   <tr class="nymou"><td class="cell-label">Modelo:</td><td class="pull-right"><%= @truck.modelo %></td></tr>
-                  <tr class="nymou"><td class="cell-label">Marca:</td><td class="pull-right"><%= @truck.brand_truck.name if @truck.brand_truck %></td></tr>
+
                   <tr class="nymou"><td class="cell-label">Ubicación:</td><td class="pull-right"><%= @truck.state.name  if @truck.state %> - <%= @truck.city.name if @truck.city %></td></tr>
                   <% if @truck.type_truck_id !=5 %>
                     <tr class="nymou"><td class="cell-label">Kilometraje:</td><td class="pull-right"><%= @truck.kilometraje!= nil ? @truck.kilometraje+ ' Km' : 'Sin Info' %></td></tr>
+                    <tr class="nymou"><td class="cell-label">Marca:</td><td class="pull-right"><%= @truck.brand_truck.name if @truck.brand_truck %></td></tr>
                   <% end %>
                   <tr class="nymou"><td class="cell-label">Estado:</td><td class="pull-right">
                     <% if @truck.estado == 0 %>
@@ -72,9 +73,9 @@
                         <% end %>
                       </td>
                     </tr>
+                  <tr class ='nymou'><td class='cell-label'>Referencia</td><td class='pull-right'><%= @truck.referencia.name %> </td></tr>
                   <% end %>
                   <tr class ='nymou'><td class='cell-label'>Peso Bruto:</td><td class='pull-right'><%= @truck.pesobruto %> </td></tr>
-                  <tr class ='nymou'><td class='cell-label'>Referencia</td><td class='pull-right'><%= @truck.referencia.name %> </td></tr>
                   </tbody></table>
                 </div><!-- /.table-responsive -->
               </div><!-- /.module-body -->
@@ -172,7 +173,7 @@
                       <% end%>
                   <!--CAMION-->
                       <% if @truck.type_truck_id == 3 %>
-                          <tr class="nymou">
+                          <!--tr class="nymou">
                             <td class="cell-label">
                               <b>Quinta Rueda</b><br>
                               <%= @truck.wheels_truck_id? ? @truck.wheels_truck.name: 'Sin Información' %>
@@ -197,7 +198,7 @@
                               <b>Poliza</b><br>
                               <%= @truck.contracts_truck_id.nil? ?  'Sin Información' : @truck.contracts_truck.name  %>
                             </td>
-                          </tr>
+                          </tr -->
                           <tr class="nymou">
                               <td class="cell-label">
                                 <b>Tipo de Carrroceria</b><br>
@@ -211,8 +212,14 @@
                                 <b>Marca Carpa</b><br>
                                 <%=  @truck.marcacarpa.nil? ?  'Sin Información' : @truck.marcacarpa %>
                               </td>
-                              <td class="cell-label"></td>
-                              <td class="cell-label"></td>
+                              <td class="cell-label">
+                                <b>Tipo Cupo</b><br>
+                                <%= @truck.spaces_truck_id.nil? ?  'Sin Información' : @truck.spaces_truck.name  %>
+                              </td>
+                              <td class="cell-label">
+                                <b>Capacidad de Carga Matricula</b><br>
+                                <%=  @truck.capacidadcarga.nil? ?  'Sin Información' : @truck.capacidadcarga %>
+                              </td>
                           </tr>
                       <% end %>
                   <!--BUS-->
@@ -223,11 +230,17 @@
                       <% if @truck.type_truck_id == 5 %>
                           <tr class="nymou">
                             <td class="cell-label">
-                              <b>Marca Carpa</b><br>
-                              <%=  @truck.marcacarpa.nil? ?  'Sin Información' : @truck.marcacarpa %>
+                                <b>Marca Carroceria</b><br>
+                                <%=  @truck.marca_carroceria_id.nil? ?  'Sin Información' : MarcaCarroceria.find(@truck.marca_carroceria_id).name %>
                             </td>
-                            <td class="cell-label"></td>
-                            <td class="cell-label"></td>
+                            <td class="cell-label">
+                              <b>Número de ejes del Trailer</b><br>
+                                <%= @truck.numeroejestrailer? ? @truck.numeroejestrailer : 'Sin Información' %>
+                            </td>
+                            <td class="cell-label">
+                                <b>Número de ejes Retractiles</b><br>
+                                <%= @truck.ejesretractiles? ?  @truck.ejesretractiles : 'Sin Información' %>
+                            </td>
                             <td class="cell-label"></td>
                             <td class="cell-label"></td>
                             <!--
@@ -239,14 +252,13 @@
                                 <b>Tipo de Carrroceria</b><br>
                                 <%=  @truck.tipo_carroceria_id.nil? ?  'Sin Información' : TipoCarroceria.find(@truck.tipo_carroceria_id).name %>
                               </td>
-                              <td class="cell-label">
-                                <b>Marca Carroceria</b><br>
-                                <%=  @truck.marca_carroceria_id.nil? ?  'Sin Información' : MarcaCarroceria.find(@truck.marca_carroceria_id).name %>
-                              </td>
+
                               <td class="cell-label"></td>
                             -->
                           </tr>
-                          <%= render partial: 'shared/showSeVendeTrailler' ,locals: { object: @truck} %>
+                          <!--
+                            <%= render partial: 'shared/showSeVendeTrailler' ,locals: { object: @truck} %>
+                          -->
                       <% end %>
                   <!--VAN-->
                       <% if @truck.type_truck_id == 6 %>
