--- a/app/views/shared/_camposGeneralesII.erb
+++ b/app/views/shared/_camposGeneralesII.erb
@@ -2,7 +2,6 @@
 <div class="row">
 	<div class="col-md-offset-1 col-md-5">
 		<div class="form-group">
-
 			<label>
 				<%= f.check_box :negociable  %> Negociable
 		 	</label>
@@ -16,25 +15,25 @@
 				<%= f.check_box :frenosabs  %> Frenos ABS
 			</label>
 			<br/>
+			<% if type != 5 %>
+				<label>
+					<%= f.check_box :aireAcondicionado  %> Aire Acondicionado
+				</label>
+				<br/>
 
-			<label>
-				<%= f.check_box :aireAcondicionado  %> Aire Acondicionado
-			</label>
-			<br/>		
+			 	<label>
+					<%= f.check_box :motorreparado  %> Motor Reparado
+			 	</label> <br/>
 
-		 	<label>
-				<%= f.check_box :motorreparado  %> Motor Reparado
-		 	</label> <br/>
-		  
-			<label>
-				<%= f.check_box :cajareparada  %> Caja Reparada
-		 	</label> <br/>
+				<label>
+					<%= f.check_box :cajareparada  %> Caja Reparada
+			 	</label> <br/>
 
-			<label>
-				<%= f.check_box :transmisionreparada  %> Transmision Reparada
-			</label>
-			<br/>
-
+				<label>
+					<%= f.check_box :transmisionreparada  %> Transmision Reparada
+				</label>
+				<br/>
+			<% end %>
 		  	<label>
 				<%= f.check_box :unicodueno  %> Unico dueño
 		  	</label>
@@ -52,11 +51,11 @@
 				<%= f.label :estadollantas, 'Estado de llantas' %>
 				<%= f.select(:estadollantas, [['Excelente', 0], ['Bueno', 1], ['Regular', 2], ['Malo', 3]], {include_blank: 'Selecccione'}, { :class => 'form-control' }) %>
 			</div>
-			
-			
-			<div class="form-group">
-				<%= f.label :tipodecaja, 'Tipo de caja' %>
-				<%= f.select(:tipodecaja, [['Automatica', 0], ['Manual', 1]], {include_blank: 'Selecccione'}, { :class => 'form-control' }) %>
-			</div>
+			<% if type != 5 %>
+				<div class="form-group">
+					<%= f.label :tipodecaja, 'Tipo de caja' %>
+					<%= f.select(:tipodecaja, [['Automatica', 0], ['Manual', 1]], {include_blank: 'Selecccione'}, { :class => 'form-control' }) %>
+				</div>
+			<% end %>
 	</div>
 </div>
