--- a/app/views/shared/_showCamposGeneralesII.html.erb
+++ b/app/views/shared/_showCamposGeneralesII.html.erb
@@ -7,10 +7,7 @@
       <b>Estado de llantas</b><br>
       <%= object.estadollantas.nil? ? 'Sin Información' : Environment::ESTADO_LLANTAS[object.estadollantas] %>
     </td>
-    <td class="cell-label">
-      <b>Aire Acondicionado</b><br>
-      <%= object.aireAcondicionado.nil? ? 'Sin Información' : object.aireAcondicionado? ? 'Si': 'No' %>
-    </td>
+
     <td class="cell-label">
       <b>Frenos ABS</b><br>
       <%= object.frenosabs.nil? ? 'Sin Información' : object.frenosabs? ? 'Si': 'No' %>
@@ -19,9 +16,16 @@
       <b>Unico Dueño</b><br>
       <%= object.unicodueno.nil? ? 'Sin Información' : object.unicodueno? ? 'Si': 'No' %>
     </td>
+    <% if @truck.type_truck_id !=5 %>
+      <td class="cell-label">
+        <b>Aire Acondicionado</b><br>
+        <%= object.aireAcondicionado.nil? ? 'Sin Información' : object.aireAcondicionado? ? 'Si': 'No' %>
+      </td>
+    <% else %>
+      <td class="cell-label"></td>
+    <% end %>
 </tr>
 <tr class="nymou">
-
     <td class="cell-label">
       <b>Vigias</b><br>
       <%=  object.vigia.nil? ?  'Sin Información' : object.vigia? ? 'Si' : 'No' %>
@@ -31,22 +35,23 @@
         <b>Tipo De Caja</b><br>
         <%= object.tipodecaja.nil? ? 'Sin Información' : object.tipodecaja == 0 ? 'Automatica' : 'Manual' %>
       </td>
-
       <td class="cell-label">
         <b>Motor Reparado</b><br>
         <%= object.motorreparado.nil? ? 'Sin Información' : object.motorreparado? ? 'Si': 'No' %>
       </td>
-    <%  else %>
-      <td class="cell-label"></td>
-      <td class="cell-label"></td>
-    <% end %>
-    <td class="cell-label">
-      <b>Caja Reparada</b><br>
-      <%= object.cajareparada.nil? ? 'Sin Información' : object.cajareparada? ? 'Si': 'No' %>
-    </td>
+      <td class="cell-label">
+        <b>Caja Reparada</b><br>
+        <%= object.cajareparada.nil? ? 'Sin Información' : object.cajareparada? ? 'Si': 'No' %>
+      </td>
 
-    <td class='cell-label'>
-      <b>Transmision Reparada</b><br>
-      <%= object.transmisionreparada.nil? ? 'Sin Información' : object.transmisionreparada? ? 'Si': 'No' %>
-    </td>
+      <td class='cell-label'>
+        <b>Transmision Reparada</b><br>
+        <%= object.transmisionreparada.nil? ? 'Sin Información' : object.transmisionreparada? ? 'Si': 'No' %>
+      </td>
+      <% else %>
+      <td class='cell-label'></td>
+      <td class='cell-label'></td>
+      <td class='cell-label'></td>
+      <td class='cell-label'></td>
+    <% end %>
 </tr>
