--- a/app/views/shared/_form_extra.html.erb
+++ b/app/views/shared/_form_extra.html.erb
@@ -50,10 +50,11 @@
 
 <div class="row">
 
+<div class="row">
   <div class="col-md-12">
     <div class="form-group">
-      <%= f.label :type_truck_id, 'Tipo de camion' %>
-      <%= f.collection_select :type_truck_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+      <%= f.label :type_trucks, 'Tipos de camiones' %>
+      <%= f.association :type_trucks, as: :check_boxes, item_wrapper_tag: :div, item_wrapper_class: "col-md-4", label: false %>
     </div>
   </div>
 </div>
