--- a/app/views/admin/extras/_resultTable.erb
+++ b/app/views/admin/extras/_resultTable.erb
@@ -23,8 +23,11 @@
         </td>
 
         <td>
-
-          <%=  extra.type_truck.name  if extra.type_truck %>
+          <% if extra.type_trucks %>
+            <% extra.type_trucks.each do |truck| %>
+              <%= truck.name %>
+            <% end %>
+          <% end %>
         </td>
 
         <td>
