--- a/app/views/shared/_form_extra.html.erb
+++ b/app/views/shared/_form_extra.html.erb
@@ -2,7 +2,11 @@
   <div class="col-md-6">
     <div class="form-group">
       <%= f.label :nit, 'NIT' %>
-      <%= f.text_field :nit, value: '', :class =>'form-control'  %>
+      <% if @extra.id.blank? %>
+        <%= f.text_field :nit, value: '', :class =>'form-control'  %>
+      <% else %>
+        <%= f.text_field :nit, :class =>'form-control'  %>
+      <% end %>
     </div>
   </div>
 
