--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -247,7 +247,7 @@
 
 
                         if(id == '0'){
-                            $('#servicio_brand').append('<option value="">Todas las marcas</option>')
+                            $('#servicio_brand').append('<option value="">Seleccionar</option>')
 
 
                             $.each(msg, function(index, value) {
@@ -256,7 +256,7 @@
 
                         } else{
 
-                            $('#servicio_brand').append('<option value="">Todas las marcas</option>')
+                            $('#servicio_brand').append('<option value="">Seleccionar</option>')
                             $.each(msg, function(index, value) {
                                 $.each(value.brand_extras, function(index, brand) {
                                   $('#servicio_brand').append('<option value="'+brand.id+'">'+brand.name+'</option>')
