se agregan nuevos stilos

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -5340,3 +5340,12 @@ a {
 #eliminar .widget-header a i{
   float:right;
 }
+
+.box-resalto{
+  background-color: #FAB115;
+  padding: 10px;
+  border-radius: 5px;
+  color: #000;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
