--- a/app/assets/stylesheets/lightbox.css
+++ b/app/assets/stylesheets/lightbox.css
@@ -103,7 +103,7 @@ body:after {
 .lb-prev, .lb-next {
   height: 100%;
   cursor: pointer;
-  display: block;
+  display: block !important;
 }
 
 .lb-nav a.lb-prev {
@@ -117,6 +117,7 @@ body:after {
   -moz-transition: opacity 0.6s;
   -o-transition: opacity 0.6s;
   transition: opacity 0.6s;
+ display: block !important;
 }
 
 .lb-nav a.lb-prev:hover {
