--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,9 @@
  * file per style scope.
  *
  *= require jquery-ui
- *= require lightbox/lightbox
- *= require_tree .
+ *= require lightbox
  *= require_self
+ *= require fancybox
+ *= require_tree .
  */
+ 
