--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -104,12 +104,12 @@
 
 								<div class="row">
 									<div class="col-md-12">
-										<label for="">  Auto Carpado </label><br/>
-											<%= f.radio_button :autocarpado, 'Si', :checked => false %> Si
-											<%= f.radio_button :autocarpado, 'No', :checked => false %> No
-											<br/><br/>
+										<%= f.label :autocarpado, 'Auto Carpado' %>
+										<%= f.select(:autocarpado, [['Automática', 0], ['Manual', 1], ['No Tiene', 2]], {include_blank: 'Selecccione'}, { :class => 'form-control' }) %>        
+										<br/><br/>
 									</div>
 								</div>
+														
 							<% end %>
 
 							<!--Camion 3-->
