agregando el Edit de calve junto con eledit de admin_user

--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -11,6 +11,9 @@
 
     = f.input :status
 
+    =f.password_field :password
+
+    =f.password_field :password_confirmation
 
   .form-actions
     = f.button :submit
