quitando elligthbox de la carga posterior de scripts en el footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,6 @@
 <%= yield %>
 <%= render 'includes/footer' %>
 
-<%= javascript_include_tag 'bootstrap.min', 'bootstrap-hover-dropdown.min', 'owl.carousel.min', 'echo.min', 'jquery.easing-1.3.min', 'bootstrap-slider.min', 'jquery.rateit.min', 'lightbox.min', 'bootstrap-select.min', 'wow.min', 'scripts', 'switchstylesheet' %>
-<%= yield :footer %>
-
+<%= javascript_include_tag 'bootstrap.min', 'bootstrap-hover-dropdown.min', 'owl.carousel.min', 'echo.min', 'jquery.easing-1.3.min', 'bootstrap-slider.min', 'jquery.rateit.min', 'bootstrap-select.min', 'wow.min', 'scripts', 'switchstylesheet' %>
 </body>
 </html>
