Validacion de refrencia, revert cambio redirect to render para mantener la data del objeto nuevo

--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -76,7 +76,7 @@
                       </td>
                     </tr>
 
-                  <tr class ='nymou'><td class='cell-label'>Referencia</td><td class='pull-right'><%= @truck.referencia.name %> </td></tr>
+                  <tr class ='nymou'><td class='cell-label'>Referencia</td><td class='pull-right'><%= @truck.referencia.blank? ? 'Sin Informacion' : @truck.referencia.name %> </td></tr>
                   <% end %>
                   <tr class ='nymou'><td class='cell-label'>Peso Bruto:</td><td class='pull-right'><%= @truck.pesobruto %> </td></tr>
                   </tbody></table>
