emulamos que aun tiene plan gratuito pero si se habilita la opcion de comprar aun no tenemos payu pero ya se arranca con la onfiguracion a nivel logico de como se compraran planes

--- a/app/views/layouts/cliente.html.erb
+++ b/app/views/layouts/cliente.html.erb
@@ -92,7 +92,9 @@
         </ul>
         -->
       </li>
-
+      <li >
+        <a href=" <%= comprar_path %>"><i class="fa fa-fw fa-dashboard"></i> Comprar planes </a>
+      </li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= @user.name %> <b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -117,10 +119,9 @@
         <li >
           <a href=" <%=  inbox_index_path %>"><i class="fa fa-fw fa-envelope"></i> <%= "Inbox (#{@user.messages_no_leidos.size})" %> </a>
         </li>
-
-
-
-
+        <li >
+          <a href=" <%= comprar_path %>"><i class="fa fa-fw fa-dashboard"></i> Comprar planes </a>
+        </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
