--- a/app/views/layouts/cliente.html.erb
+++ b/app/views/layouts/cliente.html.erb
@@ -93,7 +93,7 @@
         -->
       </li>
       <li >
-        <a href=" <%= comprar_path %>"><i class="fa fa-fw fa-dashboard"></i> Comprar planes </a>
+        <a href=" <%= tarifas_path %>"><i class="fa fa-fw fa-dashboard"></i> Tarifas </a>
       </li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= @user.name %> <b class="caret"></b></a>
@@ -120,7 +120,7 @@
           <a href=" <%=  inbox_index_path %>"><i class="fa fa-fw fa-envelope"></i> <%= "Inbox (#{@user.messages_no_leidos.size})" %> </a>
         </li>
         <li >
-          <a href=" <%= comprar_path %>"><i class="fa fa-fw fa-dashboard"></i> Comprar planes </a>
+          <a href=" <%= tarifas_path %>"><i class="fa fa-fw fa-dashboard"></i> Tarifas </a>
         </li>
       </ul>
     </div>
