--- a/app/views/pages/comprar.html.erb
+++ b/app/views/pages/comprar.html.erb
@@ -1,25 +1,3 @@
-
-<%
-
-
-   def calculuarPrecio
-
-     if session[:user].nil?
-        @plan.precio1
-     else
-       if @user.typeuser == 0
-          @plan.precio1
-       else
-          @plan.precio2
-       end
-
-     end
-
-    end
-
-%>
-
-
 <form method="post" id="payuform" action="https://stg.gateway.payulatam.com/ppp-web-gateway">
   <input name="merchantId"    type="hidden"  value="500238"   >
   <input name="ApiKey"     type="hidden"  value="6u39nqhq8ftd0hlvnjfs66eh8c" >
@@ -84,7 +62,7 @@
                 <tr>
                   <th>
                     <div class="cart-grand-total pull-right">
-                      <h3 style="font-size:30px;">TOTAL: <%= number_to_currency calculuarPrecio, precision: 0%></h3>
+                      <h3 style="font-size:30px;">TOTAL: <%= number_to_currency calculuarPrecio2(), precision: 0%></h3>
                     </div>
                   </th>
                 </tr>
