--- a/app/views/pages/comprar.html.erb
+++ b/app/views/pages/comprar.html.erb
@@ -30,28 +30,6 @@
           <span class="title-tag inner-top-vs">Porfavor debe ingresar los datos iniciales de cuenta, una vez procesado el pago podrá obtener acceso para puiblicar su anuncio.</span>
           <form class="register-form outer-top-xs" role="form" id="mainform">
             <div class="form-group col-md-4">
-              <label class="info-title" for="exampleOrderId1">Nombre</label>
-              <input type="text" name="name" class="form-control unicase-form-control text-input" >
-              <input type="hidden" name="plan" value="<%= params[:plan] %>" class="form-control unicase-form-control text-input" >
-              <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"/>
-            </div>
-            <div class="form-group col-md-4">
-              <label class="info-title" for="exampleBillingEmail1">Documento De Identidad</label>
-              <input type="text" name="cedula" class="form-control unicase-form-control text-input" id="">
-            </div>
-            <div class="form-group col-md-4">
-              <label class="info-title" for="exampleBillingEmail1">Teléfono</label>
-              <input type="text" name="telefono" class="form-control unicase-form-control text-input" id="">
-            </div>
-            <div class="form-group col-md-4">
-              <label class="info-title" for="exampleBillingEmail1">Email</label>
-              <input type="text" name="email" class="form-control unicase-form-control text-input" id="">
-            </div>
-            <div class="form-group col-md-4">
-              <label class="info-title" for="exampleBillingEmail1">Contraseña</label>
-              <input type="text" name="clave" class="form-control unicase-form-control text-input" id="">
-            </div>
-            <div class="form-group col-md-4">
               <label class="info-title" for="exampleBillingEmail1">Cantidad de anuncios</label>
               <input type="text" class="form-control unicase-form-control text-input" id="" readonly value="<%=  @plan.trucks +  @plan.extra +  @plan.service %>">
             </div>
@@ -62,7 +40,7 @@
                 <tr>
                   <th>
                     <div class="cart-grand-total pull-right">
-                      <h3 style="font-size:30px;">TOTAL: <%= number_to_currency calculuarPrecio2(), precision: 0%></h3>
+                      <h3 style="font-size:30px;">TOTAL: <%= calculuarPrecio2() %></h3>
                     </div>
                   </th>
                 </tr>
