--- a/app/views/includes/_menu.html.haml
+++ b/app/views/includes/_menu.html.haml
@@ -23,7 +23,7 @@
               %li.dropdown.dropdown-small
                 %a.dropdown-toggle{:href => registrar_usuario_sessions_path} Registrarse
             %li.dropdown.dropdown-small
-              %a.dropdown-toggle{:href => "/tarifas"}
+              %a.dropdown-toggle{:href => "/tarifas"} Tarifas
             %li.dropdown.dropdown-small
               %a.dropdown-toggle{:href => "/terminos"} Terminos
             %li.dropdown.dropdown-small
